chore: refactored code packages
