# api/errorResponse.go
@@ -1,7 +1,7 @@
-package model
+package api
 
-// ApiResponse
-type ApiResponse struct {
+// ErrorResponse
+type ErrorResponse struct {
 	Code    int32  `json:"code,omitempty" format:"int" example:"400"`
 	Message string `json:"message,omitempty" format:"string"`
 }
