# docs/swagger.json
@@ -27,20 +27,20 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.MarkdownSnippetListItem"
+                                "$ref": "#/definitions/md.MDListItem"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -63,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateMarkdownSnippet"
+                            "$ref": "#/definitions/md.CreateMDReq"
                         }
                     }
                 ],
@@ -71,19 +71,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.MarkdownSnippet"
+                            "$ref": "#/definitions/md.MarkdownSnippet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -106,7 +106,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdateMarkdownSnippet"
+                            "$ref": "#/definitions/md.UpdateMDReq"
                         }
                     }
                 ],
@@ -114,25 +114,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.MarkdownSnippet"
+                            "$ref": "#/definitions/md.MarkdownSnippet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -163,19 +163,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.MarkdownSnippet"
+                            "$ref": "#/definitions/md.MarkdownSnippet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -207,7 +207,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ApiResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -215,7 +221,7 @@
         }
     },
     "definitions": {
-        "model.ApiResponse": {
+        "api.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -229,7 +235,7 @@
                 }
             }
         },
-        "model.CreateMarkdownSnippet": {
+        "md.CreateMDReq": {
             "type": "object",
             "required": [
                 "body"
@@ -243,22 +249,13 @@
                 }
             }
         },
-        "model.MarkdownSnippet": {
+        "md.MDListItem": {
             "type": "object",
-            "required": [
-                "body"
-            ],
             "properties": {
-                "body": {
-                    "description": "Markdown body to save.",
-                    "type": "string",
-                    "minLength": 1
-                },
                 "createDate": {
                     "description": "Date markdown snippet was created",
                     "type": "string",
-                    "format": "date-time",
-                    "readOnly": true
+                    "format": "date-time"
                 },
                 "id": {
                     "description": "Markdown snippet guid.",
@@ -267,14 +264,18 @@
                 }
             }
         },
-        "model.MarkdownSnippetListItem": {
+        "md.MarkdownSnippet": {
             "type": "object",
             "properties": {
+                "body": {
+                    "description": "Markdown body to save.",
+                    "type": "string",
+                    "example": "# Markdown Snippet\nSome Text"
+                },
                 "createDate": {
                     "description": "Date markdown snippet was created",
                     "type": "string",
-                    "format": "date-time",
-                    "readOnly": true
+                    "format": "date-time"
                 },
                 "id": {
                     "description": "Markdown snippet guid.",
@@ -283,15 +284,17 @@
                 }
             }
         },
-        "model.UpdateMarkdownSnippet": {
+        "md.UpdateMDReq": {
             "type": "object",
             "required": [
-                "body"
+                "body",
+                "id"
             ],
             "properties": {
                 "body": {
                     "description": "Markdown body to save.",
                     "type": "string",
+                    "maxLength": 1024,
                     "minLength": 1
                 },
                 "id": {
